syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/rpc/status.proto";

package longrunning;

message Operation {
  string operation_id = 1;

  map<string, string> metadata = 2;

  bool done = 10;

  google.rpc.Status error = 11;

  map<string, string> response = 12;

  google.protobuf.Timestamp creation_ts = 20;

  google.protobuf.Timestamp start_ts = 21;

  google.protobuf.Timestamp end_ts = 22;
}

service Operations {
  rpc Get(GetOperationRequest) returns (Operation) {
    option (google.api.http) = {
      get: "/v1/operations/{operation_id}"
    };
  }

  rpc Cancel(CancelOperationRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/operations/{operation_id}/cancel",
      body: "*"
    };
  }
}

message GetOperationRequest {
  string operation_id = 1;
}

message CancelOperationRequest {
  string operation_id = 1;
}
